refactor!: massive refactor to apply modern code styles to the Java part of the codebase